# Rinvid

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Rinvid.bazelproject  WORKSPACE  _clang-format  apply_clang_format.sh  buildify.sh  loc_counter.sh  verify_format.py
.github/workflows/: ubuntu_ci.yml  windows_ci.yml
core/: BUILD  BUILD.bazel  README.md  animation.cpp  application.cpp  camera.cpp  circle_shape.cpp  light.cpp  light_manager.cpp  object.cpp  quad_shape.cpp  rectangle_shape.cpp  rinvid_gfx.cpp  shader.cpp  shape.cpp  sprite.cpp  sprite_animation.cpp  sprite_object.cpp  text.cpp  texture.cpp  transformable.cpp  triangle_shape.cpp  ttf_lib.cpp
core/include/: animation.h  application.h  camera.h  circle_shape.h  drawable.h  drawable_animated.h  fixed_polygon_shape.h  light.h  light_manager.h  object.h  quad_shape.h  rectangle_shape.h  rinvid_gfx.h  rinvid_gl.h  screen.h  shader.h  shape.h  sprite.h  sprite_animation.h  sprite_object.h  text.h  texture.h  transformable.h  triangle_shape.h  ttf_lib.h
core/shaders/: default_shape.frag  default_shape.vert  default_text.frag  default_text.vert  default_texture.frag  default_texture.vert
data_types/include/: rect_pod.h
examples/: README.md
examples/full_demo/: BUILD  CMakeLists.txt  README.md  main.cpp
examples/game/: BUILD  README.md  main.cpp
examples/physix/: CMakeLists.txt  README.md  main.cpp
examples/primitive_shapes/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  main.cpp
examples/screens/: BUILD  CMakeLists.txt  README.md  level_one.cpp  level_one.h  level_two.cpp  level_two.h  main.cpp
examples/shaders/: BUILD  CMakeLists.txt  README.md  main.cpp
examples/shaders/resources/: shader.frag  shader.vert
examples/sprites/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  main.cpp
examples/testing_grounds/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  main.cpp
examples/texture_messing_around/: BUILD  main.cpp
gui/: BUILD  BUILD.bazel  README.md  button.cpp  label.cpp
gui/include/: button.h  label.h
headers/core/include/: application.h  camera.h  circle_shape.h  light_manager.h  screen.h  texture.h  transformable.h
headers/gui/include/: button.h
headers/system/include/: keyboard.h
headers/util/include/: error_handler.h  math_utils.h
include/rinvid/core/: animation.h  application.h  camera.h  circle_shape.h  drawable.h  drawable_animated.h  fixed_polygon_shape.h  light.h  light_manager.h  object.h  quad_shape.h  rectangle_shape.h  rinvid_gfx.h  rinvid_gl.h  screen.h  shader.h  shape.h  sprite.h  sprite_animation.h  sprite_object.h  text.h  texture.h  transformable.h  triangle_shape.h  ttf_lib.h
include/rinvid/data_types/: rect_pod.h
include/rinvid/gui/: button.h  label.h
include/rinvid/platformers/: world.h
include/rinvid/sound/: sound.h
include/rinvid/system/: keyboard.h  mouse.h
include/rinvid/util/: collision_detection.h  color.h  error_handler.h  image_loader.h  math_utils.h  rect.h  vector2.h  vector3.h  windows_utils.h
make_bin/: command.txt  file.mri
platformers/: entity.cpp  world.cpp
platformers/include/: entity.h  world.h
rel/include/core/include/: fixed_polygon_shape.h  rinvid_gl.h  shader.h  shape.h  text.h
rel/include/system/include/: mouse.h
sound/: BUILD  README.md  sound.cpp
sound/include/: sound.h
system/: BUILD  README.md  keyboard.cpp  mouse.cpp
system/include/: mouse.h
tests/: BUILD  CMakeLists.txt  README.md  animation_test.cpp  shader_test.cpp  sprite_test.cpp  test_main.cpp  text_test.cpp  texture_test.cpp  util_test.cpp  world_test.cpp
tests/include/: animation_test.h  opengl_test.h  sprite_test.h  texture_test.h  util_test.h  world_test.h
tools/: README.md
util/: BUILD  BUILD.bazel  README.md  collision_detection.cpp  error_handler.cpp  image_loader.cpp  windows_utils.cpp
util/include/: collision_detection.h  color.h  error_handler.h  image_loader.h  math_utils.h  quad.h  rect.h  vector2.h  vector3.h  windows_utils.h
